@@ -122,6 +122,7 @@ This feature was developed by Aman Pandey as part of the Google Summer of Code p
  * Ensure collapsible StreamBlocks expand as necessary to show validation errors (Storm Heg)
  * Ensure userbar dialog can sit above other website content (LB (Ben) Johnston)
  * Fix preview panel loading issues (Sage Abdullah)
+ * Fix `search_promotions` `0004_copy_queries` migration for long-lived Wagtail instances (Sage Abdullah)
 
 ### Documentation
 
