@@ -73,6 +73,7 @@ Changelog
  * Fix: Ensure collapsible StreamBlocks expand as necessary to show validation errors (Storm Heg)
  * Fix: Ensure userbar dialog can sit above other website content (LB (Ben) Johnston)
  * Fix: Fix preview panel loading issues (Sage Abdullah)
+ * Fix: Fix `search_promotions` `0004_copy_queries` migration for long-lived Wagtail instances (Sage Abdullah)
  * Docs: Document how to add non-ModelAdmin views to a `ModelAdminGroup` (Onno Timmerman)
  * Docs: Document how to add StructBlock data to a StreamField (Ramon Wenger)
  * Docs: Update ReadTheDocs settings to v2 to resolve urllib3 issue in linkcheck extension (Thibaud Colas)
